# Tardis

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  pyproject.toml  vcpkg.json
src/libs/: CMakeLists.txt
src/libs/cppad/cg/: abstract_atomic_fun.hpp  argument.hpp  arithmetic.hpp  arithmetic_ad.hpp  arithmetic_assign.hpp  array_id_compresser.hpp  array_view.hpp  atomic_dependency_locator.hpp  atomic_fun.hpp  atomic_fun_bridge.hpp  base_abstract_atomic_fun.hpp  base_double.hpp  base_float.hpp  bidir_graph.hpp  cg.hpp  code_handler.hpp  code_handler_impl.hpp  code_handler_loops.hpp  code_handler_vector.hpp  collect_variable.hpp  compare.hpp  cond_exp_op.hpp  cppadcg.hpp  custom_position.hpp  declare_cg.hpp  declare_cg_loops.hpp  default.hpp  exception.hpp  graph_mod.hpp  identical.hpp  job_timer.hpp  math.hpp  math_other.hpp  nan.hpp  operation.hpp  operation_node.hpp  operation_node_name_streambuf.hpp  operation_path.hpp  operation_path_node.hpp  operation_stack.hpp  (+10 more)
src/libs/cppad/cg/dae_index_reduction/: augment_path.hpp  augment_path_depth_lookahead.hpp  augment_path_depth_lookahead_a.hpp  bipartite_graph.hpp  bipartite_nodes.hpp  dae_equation_info.hpp  dae_index_reduction.hpp  dae_structural_index_reduction.hpp  dae_var_info.hpp  dummy_deriv.hpp  dummy_deriv_util.hpp  pantelides.hpp  simple_logger.hpp  soares_secchi.hpp  time_diff.hpp
src/libs/cppad/cg/evaluator/: evaluator.hpp  evaluator_ad.hpp  evaluator_adcg.hpp  evaluator_adolc.hpp  evaluator_cg.hpp  evaluator_solve.hpp
src/libs/cppad/cg/extra/: declare_extra.hpp  sparse_forjac_hessian.hpp  sparsity.hpp
src/libs/cppad/cg/lang/: lang_stream_stack.hpp  language.hpp
src/libs/cppad/cg/lang/c/: lang_c_atomic_fun.hpp  lang_c_custom_var_name_gen.hpp  lang_c_default_hessian_var_name_gen.hpp  lang_c_default_reverse2_var_name_gen.hpp  lang_c_default_var_name_gen.hpp  lang_c_util.hpp  language_c.hpp  language_c_arrays.hpp  language_c_double.hpp  language_c_float.hpp  language_c_index_patterns.hpp  language_c_loops.hpp
src/libs/cppad/cg/lang/dot/: dot_util.hpp  language_dot.hpp  language_dot_arrays.hpp  language_dot_index_patterns.hpp
src/libs/cppad/cg/lang/latex/: lang_latex_custom_var_name_gen.hpp  lang_latex_default_var_name_gen.hpp  language_latex.hpp  language_latex_arrays.hpp  language_latex_index_patterns.hpp  latex.hpp
src/libs/cppad/cg/lang/mathml/: lang_mathml_custom_var_name_gen.hpp  lang_mathml_default_var_name_gen.hpp  language_mathml.hpp  language_mathml_arrays.hpp  language_mathml_index_patterns.hpp
src/libs/cppad/cg/model/: atomic_external_function_wrapper.hpp  atomic_generic_model.hpp  external_function_wrapper.hpp  functor_generic_model.hpp  functor_model_library.hpp  generic_model.hpp  generic_model_external_function_wrapper.hpp  model_c_source_gen.hpp  model_c_source_gen_for0.hpp  model_c_source_gen_for1.hpp  model_c_source_gen_hes.hpp  model_c_source_gen_impl.hpp  model_c_source_gen_jac.hpp  model_c_source_gen_rev1.hpp  model_c_source_gen_rev2.hpp  model_library.hpp  model_library_c_source_gen.hpp  model_library_c_source_gen_impl.hpp  model_library_processor.hpp  save_files_model_library_processor.hpp
src/libs/cppad/cg/model/compiler/: abstract_c_compiler.hpp  c_compiler.hpp  clang_compiler.hpp  gcc_compiler.hpp
src/libs/cppad/cg/model/dynamic_lib/: ar_archiver.hpp  archiver.hpp  dynamic_library_processor.hpp  dynamiclib.hpp
src/libs/cppad/cg/model/dynamic_lib/linux/: linux_dynamiclib.hpp  linux_dynamiclib_model.hpp
src/libs/cppad/cg/model/llvm/: llvm.hpp  llvm_base_model_library_processor.hpp  llvm_model.hpp  llvm_model_library.hpp
src/libs/cppad/cg/model/llvm/v10_0/: llvm10_0.hpp  llvm_model_library_processor.hpp
src/libs/cppad/cg/model/llvm/v3_2/: llvm3_2.hpp  llvm_model_library_3_2.hpp  llvm_model_library_processor.hpp
src/libs/cppad/cg/model/llvm/v3_4/: llvm3_4.hpp  llvm_model_library_3_4.hpp  llvm_model_library_processor.hpp
src/libs/cppad/cg/model/llvm/v3_6/: llvm3_6.hpp  llvm_model_library_3_6.hpp  llvm_model_library_processor.hpp
src/libs/cppad/cg/model/llvm/v3_8/: llvm3_8.hpp  llvm_model_library_3_8.hpp  llvm_model_library_processor.hpp
src/libs/cppad/cg/model/llvm/v4_0/: llvm4_0.hpp  llvm_model_library_4_0.hpp  llvm_model_library_processor.hpp
src/libs/cppad/cg/model/llvm/v5_0/: llvm5_0.hpp  llvm_base_model_library_processor_impl.hpp  llvm_model_library_impl.hpp  llvm_model_library_processor.hpp
src/libs/cppad/cg/model/llvm/v6_0/: llvm6_0.hpp  llvm_model_library_processor.hpp
src/libs/cppad/cg/model/llvm/v7_0/: llvm7_0.hpp  llvm_model_library_processor.hpp
src/libs/cppad/cg/model/patterns/: hessian_with_loops_info.hpp  model_c_source_gen_loops.hpp  model_c_source_gen_loops_for0.hpp  model_c_source_gen_loops_for1.hpp  model_c_source_gen_loops_hess.hpp  model_c_source_gen_loops_hess_r2.hpp  model_c_source_gen_loops_jac.hpp  model_c_source_gen_loops_jac_fr1.hpp  model_c_source_gen_loops_rev1.hpp  model_c_source_gen_loops_rev2.hpp
src/libs/cppad/cg/model/system/: linux_system.hpp  system.hpp
src/libs/cppad/cg/model/threadpool/: CMakeLists.txt  openmp.c  openmp.h  openmp_c.hpp  openmp_h.hpp  pthread_pool.c  pthread_pool.h  pthread_pool_c.hpp  pthread_pool_h.hpp
src/libs/cppad/cg/nodes/: index_assign_operation_node.hpp  index_operation_node.hpp  loop_end_operation_node.hpp  loop_start_operation_node.hpp  print_operation_node.hpp
src/libs/cppad/cg/patterns/: dependent_pattern_matcher.hpp  equation_group.hpp  equation_pattern.hpp  independent_node_sorter.hpp  iter_equation_group.hpp  loop.hpp  loop_free_model.hpp  loop_model.hpp  loop_position.hpp
src/libs/cppad/cg/patterns/index/: index_pattern.hpp  index_pattern_impl.hpp  linear_index_pattern.hpp  plane_2d_index_pattern.hpp  random_1d_index_pattern.hpp  random_2d_index_pattern.hpp  random_index_pattern.hpp  sectioned_index_pattern.hpp
src/libs/cppad/cg/support/: cppadcg_eigen.hpp
src/py_binding/: py_ad.cpp  (+2 more)
tests/cpp/: CMakeLists.txt  atomic.cpp  source_generation_c.cpp  source_generation_dot.cpp  source_generation_latex.cpp  source_generation_mathml.cpp  test_variable.cpp
(+7 files in other folders)
